--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -19,11 +19,8 @@
 
   --btn-border-color: #e9ecef;
 
-  // This is a comment --text-color: #333333;
-  // --text-color: rgba(0, 0, 0, 0.7);
-
-  --text-color: rgba(0, 0, 0, 0.7) !important;
-  --text-color-r: rgba(0, 0, 0, 0.7) !important;
+  // --text-color: #333333;
+  --text-color: rgba(0, 0, 0, 0.7);
 
   --dark-text-color: rgba(0, 0, 0, 0.9);
 
