--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -22,10 +22,6 @@ $on-laptop: 800px;
   }
 }
 
-html {
-  color: var(--text-color-r) !important;
-}
-
 html,
 body {
   // font-family: serif !important;
@@ -33,7 +29,6 @@ body {
   font-weight: 400;
   scroll-behavior: smooth;
   text-rendering: optimizelegibility;
-  color: var(--text-color-r) !important;
 }
 
 h1,
@@ -42,7 +37,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--text-color-r);
+  color: var(--text-color);
   // font-family: serif !important;
   letter-spacing: 0px;
   line-height: 1.8;
@@ -51,7 +46,7 @@ h6 {
 
 #sidebar {
   .nav-link {
-    color: var(--text-color-r);
+    color: var(--text-color);
     span {
       border-bottom: 1px solid transparent;
       transition: border-color 0.35s ease-in-out;
@@ -73,9 +68,9 @@ h6 {
 }
 
 #site-title a {
-  color: var(--text-color-r);
+  color: var(--text-color);
   &:hover {
-    color: var(--text-color-r);
+    color: var(--text-color);
   }
 }
 
@@ -137,10 +132,10 @@ h6 {
   .panel {
     margin-bottom: 10px;
     a {
-      color: var(--text-color-r);
+      color: var(--text-color);
       text-transform: uppercase;
       &:hover {
-        color: var(--text-color-r);
+        color: var(--text-color);
       }
     }
   }
@@ -195,7 +190,7 @@ h6 {
     color: #000 !important;
 
     a {
-      color: var(--text-color-r);
+      color: var(--text-color);
       pointer-events: none;
       cursor: unset;
     }
@@ -204,7 +199,7 @@ h6 {
   p {
     margin: 10px 0 !important;
     padding: 0;
-    color: var(--text-color-r);
+    color: var(--text-color);
   }
 
   .timeline-centered::before {
@@ -433,7 +428,7 @@ h6 {
 
 .myaccordion .btn {
   width: 100%;
-  color: var(--text-color-r);
+  color: var(--text-color);
   padding: 0;
   font-weight: normal;
   text-transform: uppercase;
